--- a/_includes/horizontal_list.html
+++ b/_includes/horizontal_list.html
@@ -1,10 +1,21 @@
 <ul class="horizontal-list">
   {% for item in include.collection %}
-    <li>
-      <a href="{{ item.url }}">
-        {{ item.title }}
-      </a>
-      &nbsp;&nbsp;
-    </li>
+    {% if item.url == include.active %}
+      <li>
+        <span class="active">
+          <a href="{{ item.url }}">
+            {{ item.title }}
+          </a>
+        </span>
+        &nbsp;&nbsp;
+      </li>
+    {% else %}
+      <li>
+        <a href="{{ item.url }}">
+          {{ item.title }}
+        </a>
+        &nbsp;&nbsp;
+      </li>
+    {% endif %}
   {% endfor %}
 </ul>
